--- a/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
+++ b/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
         mc:Ignorable="d"
-        Title="Editar Permisos Específicos" Height="512" Width="444" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="Editar Permisos Específicos" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" Height="512">
 
-    <Grid>
+    <Grid Width="390" Height="483">
         <Grid.RowDefinitions>
-            <RowDefinition Height="48"/>
+            <RowDefinition Height="36"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <!--<Grid Background="#2C3E50" Grid.Row="0"/>-->
@@ -22,9 +22,47 @@
             </Border>
         </Grid>-->
 
-        <ComboBox Name="cbAplicaciones" SelectedIndex="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" HorizontalContentAlignment="Center" SelectionChanged="cbAplicaciones_SelectionChanged" Grid.Row="0" FontFamily="Consolas" FontWeight="Bold"/>
+        <ComboBox Name="cbAplicaciones" SelectedIndex="1" VerticalAlignment="Center" HorizontalContentAlignment="Center" SelectionChanged="cbAplicaciones_SelectionChanged" Grid.Row="0" FontFamily="Consolas" FontWeight="Bold" Margin="10,10,230,6" Height="20"/>
+        <Button Content="Aceptar" Grid.Row="1" HorizontalAlignment="Center" Margin="165,0,150,10" VerticalAlignment="Bottom" Width="75" Click="Button_Click"/>
+        <Button Content="Revalidar" HorizontalAlignment="Left" Margin="165,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <!--<ListBox Name="lbPermisos" Margin="10,10,10,35" VerticalAlignment="Stretch" SelectionMode="Multiple" Grid.Row="1">
+            <ListBox.Resources>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                    <Setter Property="SnapsToDevicePixels" Value="true" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <CheckBox Margin="5,2" IsChecked="{Binding EstadoPermiso}">
+                                    <TextBlock Margin="5,2" Text="{Binding NombrePermiso }"/>
+                                    -->
+        <!--<ContentPresenter />-->
+        <!--
+                                </CheckBox>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.Resources>
+        </ListBox>-->
+        <ListView x:Name="lvPermisos" Grid.Row="1" Margin="10,10,10,35" >
+            <ListView.View>
+                <GridView x:Name="gv">
+                    <GridViewColumn x:Name="gridClm_SelectRow" Width="auto">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox Margin="0" HorizontalContentAlignment="Left" Width="auto" HorizontalAlignment="Left" x:Name="cbSelectRow" IsChecked="{Binding EstadoPermiso}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                        <CheckBox Margin="0" x:Name="chkSelectAll" Click="ChkSelectAll_Click" HorizontalAlignment="Left"  HorizontalContentAlignment="Left" />
+                    </GridViewColumn>
+                    
+                    <GridViewColumn Header="Nombre del Permiso" Width="300" DisplayMemberBinding="{Binding Path=NombrePermiso}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
-        <DataGrid Name="dgPermisos" ColumnWidth="*" HeadersVisibility="Column" Grid.Row="1" VerticalScrollBarVisibility="Visible" FontSize="12" Margin="5" >
+        <!--<DataGrid Name="dgPermisos" ColumnWidth="*" HeadersVisibility="Column" Grid.Row="1" VerticalScrollBarVisibility="Visible" FontSize="12" Margin="5" >
             <DataGrid.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
             </DataGrid.Resources>
@@ -45,7 +83,7 @@
                 <DataGridCheckBoxColumn Header="ESTADO" Binding="{Binding Estado}" />
             </DataGrid.Columns>
 
-        </DataGrid>
+        </DataGrid>-->
     </Grid>
 
 </Window>
