--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="120"/>
+            <ColumnDefinition Width="130"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <!--<Rectangle Grid.Column="0" Stroke="#FFABADB3" >-->
@@ -32,44 +32,44 @@
 
 
 
-            <Button Grid.Column="0" Cursor="Hand" Content="PEDIDOS" Name="btnUSUARIOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click" Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Stretch" Foreground="White" Background="{x:Null}" Padding="0,1" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> USUARIOS" Name="btnUSUARIOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click" Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Stretch" Foreground="White" Background="{x:Null}" Padding="0,1" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/32.png" Width="32" Height="32" />-->
             </Button>
 
-            <Button Grid.Column="0" Cursor="Hand" Content="DESVIOS" Name="btnPEDIDOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> PEDIDOS" Name="btnPEDIDOS" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="AUDITORIA"  Name="btnPEDIDOS1" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> AUDITORIA"  Name="btnPEDIDOS1" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="PRODUCCION"  Name="btnPEDIDOS2" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> PRODUCCION"  Name="btnPEDIDOS2" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="EMBALADO"  Name="btnPEDIDOS3" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> EMBALADO"  Name="btnPEDIDOS3" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="TEST"  Name="btnPEDIDOS4" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> TEST"  Name="btnPEDIDOS4" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="PIEZAS"  Name="btnPEDIDOS5" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> PIEZAS"  Name="btnPEDIDOS5" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="STOCK INTERNO"  Name="btnPEDIDOS6" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> STOCK INTERNO"  Name="btnPEDIDOS6" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="FALLAS"  Name="btnPEDIDOS7" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> FALLAS"  Name="btnPEDIDOS7" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="USUARIOS"  Name="btnPEDIDOS8" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> DESVIOS"  Name="btnPEDIDOS8" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="REPARACIONES"  Name="btnPEDIDOS9" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> REPARACIONES"  Name="btnPEDIDOS9" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="MODELOS" Name="btnPEDIDOS10" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> MODELOS" Name="btnPEDIDOS10" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
-            <Button Grid.Column="0" Cursor="Hand" Content="PRODUCTOS"  Name="btnPEDIDOS11" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
+            <Button Grid.Column="0" Cursor="Hand" Content="> PRODUCTOS"  Name="btnPEDIDOS11" Style="{StaticResource hamburgerMenuButton}" Click="Button_Click_1"  Margin="0,0,0,0" BorderBrush="{x:Null}" FontWeight="Bold" Foreground="White" Background="{x:Null}" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Left" Height="30" FontFamily="Consolas" FontSize="14">
                 <!--<Image Source="/ConfiguracionUsuarios;component/Resources/64.png" Width="32" Height="32" />-->
             </Button>
 
